--- a/metadata.yaml
+++ b/metadata.yaml
@@ -3,11 +3,11 @@ name: fuel-plugin-vmware-dvs
 # Human-readable name for your plugin
 title: Neutron VMware DVS ML2 plugin
 # Plugin version
-version: '2.1.1'
+version: '2.2.1'
 # Description
 description: Enable to use plugin vmware_dvs for Neutron
 # Required fuel version
-fuel_version: ['7.0']
+fuel_version: ['8.0']
 # Specify license of your plugin
 licenses: ['Apache License Version 2.0']
 # Specify author or company name
@@ -17,15 +17,15 @@ homepage: 'https://github.com/wsronek/fuel-plugin-vmware-dvs'
 # Specify a group which your plugin implements, possible options:
 # network, storage, storage::cinder, storage::glance, hypervisor
 groups: ['network']
-#is_hotpluggable: false
+is_hotpluggable: false
 
 # The plugin is compatible with releases in the list
 releases:
   - os: ubuntu
-    version: 2015.1.0-7.0
-    mode: ['ha','multinode']
+    version: liberty-8.0
+    mode: ['ha']
     deployment_scripts_path: deployment_scripts/
     repository_path: repositories/ubuntu
 
 # Version of plugin package
-package_version: '3.0.0'
+package_version: '4.0.0'
